Add cshrcasework.justice.gov.uk to permitted domains

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -4,6 +4,7 @@
 - cica.gsi.gov.uk
 - cjs.gsi.gov.uk
 - crowncommercial.gov.uk
+- cshrcasework.justice.gov.uk
 - digital.justice.gov.uk
 - giaa.gov.uk
 - hmcourts-service.gsi.gov.uk
