Enable cop that is corrects deprecated syntax in rails > 5.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -207,7 +207,7 @@ Style/FormatStringToken:
   Enabled: false
 
 Rails/HttpPositionalArguments:
-  Enabled: false
+  Enabled: true
 
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
