CT-3087 Add publicguardian.gov.uk to the existing approved list of email domains

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -34,6 +34,7 @@
 - ppo.gsi.gov.uk
 - probation.gsi.gov.uk
 - publicguardian.gsi.gov.uk
+- publicguardian.gov.uk
 - sentencingcouncil.gov.uk
 - sentencingcouncil.gsi.gov.uk
 - yjb.gsi.gov.uk
