Disable cope that was unavailable in Circle CI

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -194,3 +194,6 @@ Lint/RedundantWithObject:
 
 FactoryBot/CreateList:
   Enabled: false
+
+Lint/MissingSuper:
+  Enabled: false # was causing circle to fail
