Add exemptions for some rubocops
RSpec/DescribeClass - does not really may sense to use in features that
test user journeys rather than specific classes

Rails/HelperInstanceVariable - would require refactor byeond scope of
rails upgrade

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -200,3 +200,10 @@ Lint/MissingSuper:
 
 RSpec/LeakyConstantDeclaration:
   Enabled: false # possibly reenable, after fixing impage_dimension_validator_spec.rb
+
+Rails/HelperInstanceVariable:
+  Enabled: false # would need some thought about refactor will not do before upgrade to rails 5
+
+RSpec/DescribeClass:
+  Exclude:
+    - 'spec/features/**/*'
