Disable Nameing/MethodParameterName
There are are a few variables wih one sub three letter names but they
make sense in context.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -210,6 +210,9 @@ RSpec/DescribeClass:
 
 Capybara/VisibilityMatcher:
   Enabled: false 
+
+Naming/MethodParameterName:
+  Enabled: false
        
 Style/FormatStringToken:
   Enabled: false
