--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -365,6 +365,9 @@ Style/FormatStringToken:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Rails/FilePath:
+  Enabled: false
+
 # Offense count: 1
 # Cop supports --auto-correct.
 # Configuration parameters: InverseMethods, InverseBlocks.
