Disabled cops for now
- will look at after initial upgrade

Rails/InverseOf:
  Enabled: false

Rails/UniqueValidationWithoutIndex:
  Enabled: false

Rails/HasManyOrHasOneDependent:
  Enabled: false

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -217,6 +217,15 @@ Naming/MethodParameterName:
 Style/FormatStringToken:
   Enabled: false
 
+Rails/InverseOf:
+  Enabled: false
+
+Rails/UniqueValidationWithoutIndex:
+  Enabled: false
+
+Rails/HasManyOrHasOneDependent:
+  Enabled: false
+
 Rails/ApplicationController:
   Exclude:
     - 'app/controllers/health_check_controller.rb'
