CT-3206 Switch probe endpoints to stop cluster dropping all pods when connection to ES fails

--- a/config/kubernetes/demo/deployment.yaml
+++ b/config/kubernetes/demo/deployment.yaml
@@ -91,7 +91,7 @@ spec:
                 name: environment-variables
           readinessProbe:
             httpGet:
-              path: /healthcheck
+              path: /ping
               port: 3000
               httpHeaders:
                 - name: X-Forwarded-Proto
@@ -102,7 +102,7 @@ spec:
               periodSeconds: 60
           livenessProbe:
             httpGet:
-              path: /healthcheck
+              path: /ping
               port: 3000
               httpHeaders:
                 - name: X-Forwarded-Proto
