CT-3319 Add criminalappealoffice.justice.gov.uk to permitted domains

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -3,6 +3,7 @@
 - cica.gov.uk
 - cica.gsi.gov.uk
 - cjs.gsi.gov.uk
+- criminalappealoffice.justice.gov.uk
 - crowncommercial.gov.uk
 - cshrcasework.justice.gov.uk
 - digital.justice.gov.uk
