CT-3391 Add ppo.gov.uk to allowed domains

--- a/db/seeds/data/permitted_domains.yml
+++ b/db/seeds/data/permitted_domains.yml
@@ -32,6 +32,7 @@
 - noms.gsi.gov.uk
 - offsol.gsi.gov.uk
 - paroleboard.gsi.gov.uk
+- ppo.gov.uk
 - ppo.gsi.gov.uk
 - probation.gsi.gov.uk
 - publicguardian.gsi.gov.uk
