--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,6 +19,7 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 assets:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+    <<: *test
+
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
