--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -86,6 +86,11 @@ spec:
                   key: secret_access_key
             - name: S3_REGION
               value: 'eu-west-2'
+            - name: SENTRY_DSN
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: SENTRY_DSN
           envFrom:
             - configMapRef:
                 name: environment-variables
@@ -165,6 +170,11 @@ spec:
                 secretKeyRef:
                   name: app-secrets
                   key: SENDGRID_PASSWORD
+            - name: SENTRY_DSN
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: SENTRY_DSN
           envFrom:
             - configMapRef:
                 name: environment-variables
