--- a/config/kubernetes/staging/env-configmap.yaml
+++ b/config/kubernetes/staging/env-configmap.yaml
@@ -1,9 +1,10 @@
-kind: ConfigMap 
-apiVersion: v1 
+kind: ConfigMap
+apiVersion: v1
 metadata:
-  name: environment-variables 
+  name: environment-variables
 data:
   ENV: 'staging'
   RACK_ENV: 'production'
   RAILS_ENV: 'production'
   ACTION_MAILER_DEFAULT_URL: 'staging.peoplefinder.service.gov.uk'
+  SENTRY_ENVIRONMENT: 'staging'
