--- a/config/kubernetes/production/env-configmap.yaml
+++ b/config/kubernetes/production/env-configmap.yaml
@@ -1,11 +1,11 @@
-kind: ConfigMap 
-apiVersion: v1 
+kind: ConfigMap
+apiVersion: v1
 metadata:
-  name: environment-variables 
+  name: environment-variables
 data:
   ENV: 'production'
   RACK_ENV: 'production'
   RAILS_ENV: 'production'
   ACTION_MAILER_DEFAULT_URL: 'peoplefinder.service.gov.uk'
   GA_TRACKING_ID: 'UA-53656606-1'
-  
+  SENTRY_ENVIRONMENT: 'production'
