--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -28,7 +28,9 @@ spec:
             - name: RAILS_SERVE_STATIC_FILES
               value: 'true'
             - name: GOVUK_APP_DOMAIN
-              value: 'development.peoplefinder.service.gov.uk'
+              value: 'peoplefinder.service.gov.uk'
+            - name: GOVUK_WEBSITE_ROOT
+              value: 'development'
             - name: MOJ_PF_ES_URL
               value: 'http://aws-es-proxy-service:9200'
             - name: SECRET_KEY_BASE
@@ -126,7 +128,9 @@ spec:
           args: ["worker"]
           env:
             - name: GOVUK_APP_DOMAIN
-              value: 'development.peoplefinder.service.gov.uk'
+              value: 'peoplefinder.service.gov.uk'
+            - name: GOVUK_WEBSITE_ROOT
+              value: 'development'
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
