CT-3449 fix govuk gem (#664)
* Add env var for Plek

* add govuk_website_root

* Add to remaining environments

--- a/config/kubernetes/development/deployment.yaml
+++ b/config/kubernetes/development/deployment.yaml
@@ -27,6 +27,10 @@ spec:
           env:
             - name: RAILS_SERVE_STATIC_FILES
               value: 'true'
+            - name: GOVUK_APP_DOMAIN
+              value: 'peoplefinder.service.gov.uk'
+            - name: GOVUK_WEBSITE_ROOT
+              value: 'development'
             - name: MOJ_PF_ES_URL
               value: 'http://aws-es-proxy-service:9200'
             - name: SECRET_KEY_BASE
@@ -123,6 +127,10 @@ spec:
           command: ["./run.sh"]
           args: ["worker"]
           env:
+            - name: GOVUK_APP_DOMAIN
+              value: 'peoplefinder.service.gov.uk'
+            - name: GOVUK_WEBSITE_ROOT
+              value: 'development'
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
