Add missing gov uk and sentry env var values for cron jobs
Cron jobs failing on production with
"Expected GOVUK_APP_DOMAIN to be set"
and no errors in Sentry

--- a/config/kubernetes/production/cron-never-logged-in-notifier.yaml
+++ b/config/kubernetes/production/cron-never-logged-in-notifier.yaml
@@ -61,7 +61,16 @@ spec:
                   secretKeyRef:
                     name: app-secrets
                     key: SENDGRID_PASSWORD
-            envFrom: 
+              - name: GOVUK_APP_DOMAIN
+                value: 'peoplefinder.service.gov.uk'
+              - name: GOVUK_WEBSITE_ROOT
+                value: 'www'
+              - name: SENTRY_DSN
+                valueFrom:
+                  secretKeyRef:
+                    name: app-secrets
+                    key: SENTRY_DSN
+            envFrom:
             - configMapRef:
                 name: environment-variables
             command:
